# py-crud

./: .gitignore  README.md  conftest.py  pyproject.toml  server.py
src/: mock-data.json
src/database/: connect.py  mock_data.py  session.py
src/database/repositories/: subscriber_repository.py
src/database/repositories/implementations/: postgres_subscriber_repository.py
src/entities/: subscriber.py  subscriber_entity.py
src/interfaces/: create_subscriber_response.py  find_one_subscriber_response.py  find_subscriber_response.py  update_subscriber_response.py
src/interfaces/dtos/: create_subscriber_dto.py  update_subscriber_dto.py
src/tests/: run_around_tests.py
src/tests/mocks/: create_subscriber_use_case_mock.py  delete_subscriber_use_case_mock.py  find_one_subscriber_use_case_mock.py  find_subscriber_use_case_mock.py  subscribers_repository_mock.py  update_subscriber_use_case_mock.py
src/tests/use_cases/create_subscriber/: create_subscriber_controller_test.py  create_subscriber_use_case_test.py
src/use_cases/create_subscriber/: create_subscriber_controller.py  create_subscriber_use_case.py  index.py
src/use_cases/delete_subscriber/: delete_subscriber_controller.py  delete_subscriber_use_case.py  index.py
src/use_cases/find_one_subscriber/: find_one_subcriber_controller.py  find_one_subcriber_use_case.py  index.py
src/use_cases/find_subscribers/: find_subscribers_controller.py  find_subscribers_use_case.py  index.py
src/use_cases/update_subscriber/: index.py  update_subscriber_controller.py  update_subscriber_use_case.py
(+8 files in other folders)
