[tool.poetry]
name = "bbb-subscribers"
version = "0.3.0"
description = ""
authors = ["Odenir Gomes <odenirdev@gmail.com>"]
readme = "README.md"
packages = [{include = "bbb_subscribers"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
uuid = "^1.30"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
